Fix: spacing issues for TM paragraph across iphone 5 and 6 and smaller mobile devices

--- a/src/scss/pages/_start-page.scss
+++ b/src/scss/pages/_start-page.scss
@@ -48,10 +48,11 @@ body {
         color: $pale-grey;
         font-size: 1em;
         line-height: 1.3;
-        margin: 4.5em 0 0 0;
+        margin: 10% 0 0 0;
     }
 }
 
+// Footer Styles
 footer {
     background-color: $pale-grey;
     background: $pale-grey;
@@ -60,9 +61,10 @@ footer {
     clear: both;
     position: fixed;
     bottom: 0;
+    height: 4.5em;
     img {
         width: 11em;
-        height: 5.5em;
+        height: 5em;
         object-fit: contain;
     }
 }
